--- a/portfolio.html
+++ b/portfolio.html
@@ -60,16 +60,27 @@
   
     <li class="item">
       <a href="www." class="link"> 
-        <img src="./images/bankingapp.jpg" alt="bankingapp" width="360" height="300"/>
+        <div class="box">
+          <img src="./images/bankingapp.jpg" alt="cashless payment" width="360" height="300"/>
+        <div class="overlay">
+      <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+      </div>
+    </div>
         <div class="card-content">
         <h2 class="portfolio-list">Banking App Interface Concept</h2>
         <p class="portfolio-text">App</p>
       </div>
       </a>
     </li>
+
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img src="./images/cashless.jpg" alt="cashless payment" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Cashless Payment</h2>
         <p class="portfolio-text">Marketing</p>
@@ -78,7 +89,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img src="./images/meditation.jpg" alt="meditation app" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Meditation App</h2>
         <p class="portfolio-text">App</p>
@@ -87,7 +103,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img class="img" src="./images/taxi.jpg" alt="taxi Service" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Taxi Service</h2>
         <p class="portfolio-text">Marketing</p>
@@ -96,7 +117,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img src="./images/screen.jpg" alt="screen illustration" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Screen Illustrations</h2>
         <p class="portfolio-text">Design</p>
@@ -105,7 +131,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img src="./images/online.jpg" alt="online courses" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Online Courses</h2>
         <p class="portfolio-text">Marketing</p>
@@ -114,7 +145,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img src="./images/instagram.jpg" alt="instagram stories concept" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Instagram Stories Concept</h2>
         <p class="portfolio-text">Design</p>
@@ -123,7 +159,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img class="img" src="./images/organic.jpg" alt="organic food" width="360" height="300"/>
+      <div class="overlay">
+        <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+        </div>
+      </div>
       <div class="card-content">
       <h2 class="portfolio-list">Organic Food</h2>
         <p class="portfolio-text">Web Site</p>
@@ -132,7 +173,12 @@
     </li>
     <li class="item">
       <a href="www." class="link">
+        <div class="box">
       <img class="img" src="./images/freshcoffee.jpg" alt="freshcoffee" width="360" height="300"/>
+             <div class="overlay">
+      <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+      </div>
+    </div>
       <div class="card-content">
       <h2 class="portfolio-list">Fresh Coffee</h2>
         <p class="portfolio-text">Web Site</p>
