--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
          <a class="logo link" href="./index.html" >Web<span class="logo-span">Studio</span></a>
            <ul class="list meniu-list">
              <li>
-              <a href="./index.html" class="studio-link link">Studio</a>
+              <a href="./index.html" class="hero-nav-bar studio-link link">Studio</a>
             </li>
-             <li class="hero-nav-bar">
-               <a href="./portfolio.html" class="studio-link link hero-nav-bar">Portfolio</a>
+             <li>
+              <a href="./portfolio.html" class="studio-link link">Portfolio</a>
              </li >
              <li> 
               <a href="" class="studio-link link">Contacts</a>
