--- a/portfolio.html
+++ b/portfolio.html
@@ -15,24 +15,27 @@
      <div class="container-nav container">
       <!--Meniul de navigare pentru alte pagini-->
       <nav class="nav-meniu">
-        <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+        <a class="logo link" href="./index.html" >Web<span class="logo-span">Studio</span></a>
           <ul class="list meniu-list">
-            <li><a href="./index.html" class="studio-link link">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="studio-link link">Portfolio</a>
-            </li>
-            <li><a href="" class="studio-link link">Contacts</a></li>
+             <a href="./index.html" class="hero-nav-bar studio-link link">Studio</a>
+           </li>
+            <li>
+             <a href="./portfolio.html" class="studio-link link">Portfolio</a>
+            </li >
+            <li> 
+             <a href="" class="studio-link link">Contacts</a>
+           </li>
           </ul>
         </nav>
-              <address class="address">
-                <ul class="address-list">
-                  <li><a class="mail link mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-                  <li><a class="mail link mail-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
+        <address class="address">
+         <ul class="address-list">
+       <li><a class="mail link mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+       <li><a class="mail link mail-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+     </ul>
             </address>      
           </div>
-        
-    </header>
+   </header>
     <main>
         <!--Filter-->
       <section class="portfolio-section section">
