--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
         <div class="box">
           <img src="./images/bankingapp.jpg" alt="cashless payment" width="360" height="300"/>
         <div class="overlay">
-      <p class="card-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+      <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
       </div>
     </div>
         <div class="card-content">
