--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
         <a class="logo link" href="./index.html">Web<span class="logo-span">Studio</span></a>
           <ul class="list meniu-list">
             <li>
-             <a href="./index.html" class="hero-nav-bar studio-link link">Studio</a>
+             <a href="./index.html" class="studio-link link">Studio</a>
            </li>
             <li>
-             <a href="./portfolio.html" class="studio-link link">Portfolio</a>
+             <a href="./portfolio.html" class="studio-link link hero-nav-bar">Portfolio</a>
             </li >
             <li> 
              <a href="" class="studio-link link">Contacts</a>
